# ngsaipp

./: .gitignore  CMakeLists.txt  PacBio_kinetics.md  README.md  doxygen.config
data/epigenetics/: reads.bam  reads.bam.bai  reads.bam.pbi
data/io/: bad_empty_1st_line.bed  bad_empty_last_line.bed  bad_empty_mid_line.bed  bad_format_line1_1.bed  bad_format_line1_2.bed  bad_format_line1_3.bed  bad_format_line2_1.bed  bad_format_line2_2.bed  bad_format_line2_3.bed  bad_format_line3_1.bed  bad_format_line3_2.bed  bad_format_line3_3.bed  good_bed6.bed
docs/html/: BedReader_8hpp.html  BedReader_8hpp__dep__incl.map  BedReader_8hpp__dep__incl.md5  BedReader_8hpp__incl.map  BedReader_8hpp_source.html  BedRecord_8hpp.html  BedRecord_8hpp__dep__incl.map  BedRecord_8hpp__dep__incl.md5  BedRecord_8hpp__incl.map  BedRecord_8hpp__incl.md5  BedRecord_8hpp_source.html  CcsKineticExtractor_8hpp.html  CcsKineticExtractor_8hpp__incl.map  CcsKineticExtractor_8hpp__incl.md5  CcsKineticExtractor_8hpp_source.html  CpGRegion_8hpp.html  CpGRegion_8hpp__dep__incl.map  CpGRegion_8hpp__incl.map  CpGRegion_8hpp__incl.md5  CpGRegion_8hpp_source.html  DiPositionKineticModel_8hpp.html  DiPositionKineticModel_8hpp__dep__incl.map  DiPositionKineticModel_8hpp__dep__incl.md5  DiPositionKineticModel_8hpp__incl.map  DiPositionKineticModel_8hpp__incl.md5  DiPositionKineticModel_8hpp_source.html  DiPositionNormalizedKineticModel_8hpp.html  DiPositionNormalizedKineticModel_8hpp__incl.map  DiPositionNormalizedKineticModel_8hpp__incl.md5  DiPositionNormalizedKineticModel_8hpp_source.html  GenomeRegion_8hpp.html  GenomeRegion_8hpp__dep__incl.map  GenomeRegion_8hpp__incl.map  GenomeRegion_8hpp__incl.md5  GenomeRegion_8hpp_source.html  KineticClassifier_8hpp.html  KineticClassifier_8hpp__incl.map  KineticClassifier_8hpp__incl.md5  KineticClassifier_8hpp_source.html  KineticModel_8hpp.html  (+266 more)
docs/latex/: BedReader_8hpp.tex  BedReader_8hpp__incl.md5  BedReader_8hpp_source.tex  BedRecord_8hpp.tex  BedRecord_8hpp_source.tex  CcsKineticExtractor_8hpp.tex  CcsKineticExtractor_8hpp_source.tex  CpGRegion_8hpp.tex  CpGRegion_8hpp__dep__incl.md5  CpGRegion_8hpp_source.tex  DiPositionKineticModel_8hpp.tex  DiPositionKineticModel_8hpp_source.tex  DiPositionNormalizedKineticModel_8hpp.tex  DiPositionNormalizedKineticModel_8hpp_source.tex  GenomeRegion_8hpp.tex  GenomeRegion_8hpp__dep__incl.md5  GenomeRegion_8hpp_source.tex  KineticClassifier_8hpp.tex  KineticClassifier_8hpp_source.tex  KineticModel_8hpp.tex  KineticModel_8hpp__dep__incl.md5  KineticModel_8hpp_source.tex  KineticSignal_8hpp.tex  KineticSignal_8hpp__dep__incl.md5  KineticSignal_8hpp_source.tex  KmerData_8hpp.tex  KmerData_8hpp__dep__incl.md5  KmerData_8hpp__incl.md5  KmerData_8hpp_source.tex  KmerMap_8hpp.tex  KmerMap_8hpp__dep__incl.md5  KmerMap_8hpp__incl.md5  KmerMap_8hpp_source.tex  NormalizedKineticModel_8hpp.tex  PairWiseKineticModel_8hpp.tex  (+98 more)
src/: CMakeLists.txt
src/algorithms/: segmentation.cpp
src/dna/: SequenceEnumerator.cpp  dna_utility.cpp
src/epigenetics/: CcsKineticExtractor.cpp  DiPositionKineticModel.cpp  DiPositionNormalizedKineticModel.cpp  KineticClassifier.cpp  KineticModel.cpp  KineticSignal.cpp  KmerData.cpp  KmerMap.cpp  NormalizedKineticModel.cpp  PairWiseKineticModel.cpp  PairWiseNormalizedKineticModel.cpp  RawKineticModel.cpp  model_utility.cpp
src/genome/: CpGRegion.cpp  GenomeRegion.cpp  constants.cpp
src/io/: BedReader.cpp  BedRecord.cpp
src/parallel/: ThreadPool.cpp
src/unittests/dna/: SequenceEnumerator_unittests.cpp  dna_utility_unittests.cpp
src/unittests/epigenetics/: CcsKineticExtractor_unittests.cpp  DiPositionKineticModel_unittests.cpp  DiPositionNormalizedKineticModel_unittests.cpp  KineticSignal_unittests.cpp  KmerData_unittests.cpp  KmerMap_unittests.cpp  NormalizedKineticModel_unittests.cpp  PairWiseKineticModel_unittests.cpp  PairWiseNormalizedKineticModel_unittests.cpp  RawKineticModel_unittests.cpp  utility.cpp  utility.hpp
src/unittests/genome/: CpGRegion_unittests.cpp  GenomeRegion_unittests.cpp  constants_unittests.cpp
src/unittests/io/: BedReader_unittests.cpp  BedRecord_unittests.cpp
src/utility/: string_utility.cpp
(+114 files in other folders)
